--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
     <p>Copywriting é a arte de escrever textos persuasivos que visam vender produtos ou serviços. Ele é amplamente utilizado em publicidade, marketing e propaganda, e também pode ser usado em outras áreas, como relações públicas e jornalismo.</p>
 
     <h1>A importância da tecnologia em nossas vidas</h1>
-    <p>A tecnologia tem se tornado cada vez mais presente em nossas vidas e tem desempenhado um papel fundamental na forma como vivemos, trabalhamos e nos relacionamos uns com os outros.  Existem várias formas pelas quais a tecnologia tem impactado positivamente nossas vidas.
+    <p>A tecnologia tem se tornado cada vez mais presente em nossas vidas e tem desempenhado um papel fundamental na forma como vivemos, trabalhamos e nos relacionamos uns com os outros.  Existem várias formas pelas quais a tecnologia tem impactado positivamente nossas vidas.</p>
 
-    </p>
+    <h1>Saiba o que é Gadgets</h1>
+    <p>Os gadgets podem ser equipados com recursos avançados, como inteligência artificial, realidade virtual e aumentada, assistentes virtuais, sensores e muitos outros recursos avançados que ajudam a melhorar a experiência do usuário.</p>
+    
+    
     <hr>
     &#x2709
           <p><ins><b>Contato</b></ins></p>
