--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IA_blog.png" type="image/x-icon">
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS
     </title>
     <style>
          body{background-color: green;
-         padding: 2%; color: white;margin: 10%;margin-top: auto;}
+         padding: 2%; color: white;margin: 20%;margin-top: auto;}
          body{font-size: 18px;}
          footer{background-color: #1e1e1e;padding: 10px;text-align: center;font-size: 12px;}
 
