--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>Dicas e Informações para os amantes de Tecnologia</h2>
     <hr>
 
-    <img src="" alt="">
+    <img src="tec-imagem.jpg" alt="imagem generica de tecnologia">
 
     <h1>Sabe o que é Blockchain??</h1>
     <p>É uma tecnologia que permite o armazenamento e a transmissão de informações de forma segura, transparente e descentralizada. É uma rede de bancos de dados distribuídos que mantém um registro público de transações ou eventos. É uma espécie de livro-razão digital, que registra informações de forma imutável e auditável.
