--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </title>
     <style>
          body{background-color: green;
-         padding: 2%; color: white;margin: 10%;margin-top: auto;}
+         padding: 2%; color: white;margin: 10%;margin-top: auto;
+         min-width: 320px; 
+         max-width: 800px; 
+         margin: auto;}
          body{font-size: 18px;}
          footer{background-color: #1e1e1e;padding: 10px;text-align: center;font-size: 12px;}
 
