--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
          body{background-color: green;
          padding: 2%; color: white;margin: 10%;margin-top: auto;
          min-width: 320px; 
-         max-width: 800px; 
-         margin: auto;}
+         max-width: 800px; margin: auto;}
          body{font-size: 18px;}
          footer{background-color: #1e1e1e;padding: 10px;text-align: center;font-size: 12px;}
-
+img {
+    width: 100%;
+}
     </style>
      
 
