--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     </title>
     <style>
          body{background-color: green;
-         padding: 2%; color: white;margin: 20%;margin-top: auto;
+         padding: 2%; 
+         color: white;
+         margin: 20%;
+         margin-top: auto;
          min-width: 320px; 
-         max-width: 800px; 
+         max-width: 1920px; 
          margin: auto;}
 
          body{font-size: 16px;}
