--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mkt Digital" />
     <link rel="shortcut icon" href="et.ico" type="image/x-icon">
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS
     </title>
