--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
          margin: auto;}
 
          body{font-size: 16px;}
+         header{background-color: #1e1e1e;
+        min-height: 100px;}
          footer{background-color: #1e1e1e;padding: 10px;text-align: center;font-size: 12px;}
 
 img {
