--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
          margin-top: auto;
          min-width: 320px; 
          max-width: 800px; 
-         margin: auto;}
+         margin: auto; 
+         line-height: 2em;}
 
          body{font-size: 16px;}
          
