--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img {
     <hr>
     &#x2709
           <p><ins><b>Contato</b></ins></p>
-    <a href="mailto:contato@mktdigital.com.br">contato@mktdigital.com.br</a>
+    <a href="mailto:clarinsantista@gmail.com">clarinsantista@gmail.com</a>
 <p>
 
 
