--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ img {
     
     <hr>
     &#x2709
-          <p><ins><b>Contato</b></ins></p>
+          <p><ins><b>Fale conosco</b></ins></p>
     <a href="mailto:clarinsantista@gmail.com">clarinsantista@gmail.com</a>
 <p>
 
