--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dicas e Informações para os amantes de Tecnologia">
     <meta name="author" content="Mkt Digital">
-    <meta name="keywords" content="tecnologia, inteligencia artificial, blockchain,informatica, android">
+    <meta name="keywords" content="tecnologia, html, programação, webdesign, inteligencia artificial, blockchain,informatica, android">
     <meta name="robots" content="index, follow"
 
     <link rel="shortcut icon" href="et.ico" type="image/x-icon">
