--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Dicas e Informações para os amantes de Tecnologia">
     <meta name="author" content="Mkt Digital">
     <meta name="keywords" content="tecnologia, html, programação, webdesign, inteligencia artificial, blockchain,informatica, android">
-    <meta name="robots" content="index, follow"
+    <meta name="robots" content="index, follow">
 
     <link rel="shortcut icon" href="et.ico" type="image/x-icon">
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS
