--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
          max-width: 1280px; 
          margin: auto; 
          line-height: 2em;}
+         img {width: 30px;
+         height: auto;}
 
          body{font-size: 16px;}
          
