--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@ img {
     <h1>Saiba o que é Gadgets</h1>
     <p>Os gadgets podem ser equipados com recursos avançados, como inteligência artificial, realidade virtual e aumentada, assistentes virtuais, sensores e muitos outros recursos avançados que ajudam a melhorar a experiência do usuário.</p>
     
-    
+    <h1> Você sabe o que é LGPD?</h1>
+    <h2>LGPD - Lei Geral de Proteção de Dados, (Lei 13.709/18) que foi aprovada no Brasil em 2018 e entrou em vigor em agosto de 2020. É uma lei que regulamenta o tratamento de dados pessoais e estabelece direitos e obrigações para empresas e órgãos públicos quanto a coleta, armazenamento, uso e compartilhamento de informações pessoais. A lei tem como objetivo proteger a privacidade e os direitos de informação dos cidadãos brasileiros.
+
+</h2>
+
+
     <hr>
     &#x2709
           <p><ins><b>Fale conosco</b></ins></p>
