--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
          min-width: 320px; 
          max-width: 1280px; 
          margin: auto; 
-         line-height: 2em;}
+         line-height: 2em;
+         border-radius: 20px;}
          
 
          body{font-size: 16px;}
