--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
          min-width: 320px; 
          max-width: 1280px; 
          margin: auto; 
-         line-height: 2em;
-         border-radius: 20px;}
+         line-height: 2em;}
          
 
          body{font-size: 16px;}
