--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@ img {
     <p>LGPD - Lei Geral de Proteção de Dados, (Lei 13.709/18) que foi aprovada no Brasil em 2018 e entrou em vigor em agosto de 2020. É uma lei que regulamenta o tratamento de dados pessoais e estabelece direitos e obrigações para empresas e órgãos públicos quanto a coleta, armazenamento, uso e compartilhamento de informações pessoais. A lei tem como objetivo proteger a privacidade e os direitos de informação dos cidadãos brasileiros.
     </p>
 
+    <h1>Qual será o futuro da tecnologia ??</h1>
+    <p>É difícil prever com precisão o futuro da tecnologia, pois ela está sempre evoluindo e mudando rapidamente. No entanto, com base nas tendências atuais e nos avanços recentes, há algumas previsões para o futuro da tecnologia:
+
+        Inteligência Artificial (IA) - Realidade Aumentada e Virtual (RA/RV) - 
+        
+        Internet das Coisas (IoT) - Entre outras...</p>
 
     <hr>
     &#x2709
