--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ img {
 
         Inteligência Artificial (IA) - Realidade Aumentada e Virtual (RA/RV) - 
         
-        Internet das Coisas (IoT) - Entre outras...</p>
+        Internet das Coisas (IoT) - Entre outras que iremos abordar nesse blog.</p>
 
     <hr>
     &#x2709
