--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ img {
 
 </head>
 <body>
+    <div>
     <h1><mark>MUNDO DIGITAL</mark></h1>
     <h2>Dicas e Informações para os amantes de Tecnologia</h2>
     <hr>
-
+</div>
     <img src="tec-imagem.jpg" alt="imagem generica de tecnologia">
 
     <h1>Sabe o que é Blockchain??</h1>
