--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
          max-width: 1280px; 
          margin: auto; 
          line-height: 2em;}
+         .header{background-color: aqua;}
          
 
          body{font-size: 16px;}
@@ -36,7 +37,7 @@ img {
 
 </head>
 <body>
-    <div>
+    <div class="header">
     <h1><mark>MUNDO DIGITAL</mark></h1>
     <h2>Dicas e Informações para os amantes de Tecnologia</h2>
     <hr>
