--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          max-width: 1280px; 
          margin: auto; 
          line-height: 2em;}
-         .header{background-color: rgb(110, 111, 62);}
+         .header{background-color: #1e1e1e;}
          
 
          body{font-size: 16px;}
