--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
          max-width: 1280px; 
          margin: auto; 
          line-height: 2em;}
-         .header{background-color: #1e1e1e;}
+         .header{background-color: #1e1e1e;padding: 2%;}
+         
          
 
          body{font-size: 16px;}
