--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          margin-top: auto;
          min-width: 320px; 
          max-width: 1280px; 
-         margin: auto; 
+         margin: 5px; 
          line-height: 2em;}
          .header{background-color: #1e1e1e;padding: 20px;margin-top: 5px;}
          
