--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
          margin-top: auto;
          min-width: 320px; 
          max-width: 1280px; 
-         margin-auto; 
+         margin: auto; 
          line-height: 2em;}
-         .header{background-color: #1e1e1e;padding: 20px;margin-top: -1%;}
+         .header{background-color: #1e1e1e;padding: 20px;margin-top: -10px;}
          
          
 
