--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          max-width: 1280px; 
          margin: auto; 
          line-height: 2em;}
-         .header{background-color: #1e1e1e;padding: 20px;margin-top: -10px;}
+         .header{background-color: #1e1e1e;padding: 20px;margin-top: -1%;}
          
          
 
