--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Mkt Digital" />
     <meta name="keywords" content="tecnologia, html, programação, webdesign, inteligencia artificial, blockchain,informatica, android" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="jglhwOjq18Ar8NTC49Ym4xqhDbGYkU5gmJFGZk6bNOM" />
 
     <link rel="shortcut icon" href="et.ico" type="image/x-icon">
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS
