--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Dicas e Informações para os amantes de Tecnologia" />
     <meta name="author" content="Mkt Digital" />
     <meta name="keywords" content="tecnologia, html, programação, webdesign, inteligencia artificial, blockchain,informatica, android" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content=", index,follow" />
     <meta name="google-site-verification" content="Ala7NgWmhHqIrbTfMb0HQQ2Z-BxxcAWSDy9GX2QD1Tc" />
 
     <link rel="shortcut icon" href="et.ico" type="image/x-icon">
