--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@ img {
     <img src="tec-imagem.jpg" alt="imagem generica de tecnologia">
 
     <h1>Sabe o que é Blockchain??</h1>
-    <p>É uma tecnologia que permite o armazenamento e a transmissão de informações de forma segura, transparente e descentralizada. É uma rede de bancos de dados distribuídos que mantém um registro público de transações ou eventos. É uma espécie de livro-razão digital, que registra informações de forma imutável e auditável.
+    <p>É uma tecnologia que permite o armazenamento e a transmissão de informações de 
+        forma segura, transparente e descentralizada. É uma rede de bancos de dados distribuídos que mantém um registro público de transações ou eventos. É uma espécie de livro-razão digital, que registra informações de forma imutável e auditável.
 
     </p>
     <h1>O que é Internet das Coisas (IoT) ?</h1>
-    <p>A Internet das Coisas (IoT) é uma tecnologia em que objetos cotidianos são conectados à internet e podem coletar e trocar dados entre si. Esses objetos podem incluir desde dispositivos eletrônicos, como smartphones e computadores, até eletrodomésticos, como geladeiras, TVs e sistemas de iluminação.
+    <p>A Internet das Coisas (IoT) é uma tecnologia em que objetos cotidianos são conectados à 
+        internet e podem coletar e trocar dados entre si. Esses objetos podem incluir desde dispositivos eletrônicos, como smartphones e computadores, até eletrodomésticos, como geladeiras, TVs e sistemas de iluminação.
 
     </p>
     <h1>Saiba o que é CDN</h1>
