--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@ img {
         
         Internet das Coisas (IoT) - Entre outras que iremos abordar nesse blog.</p>
 
+    <h1>O Que é HTML?</h1>
+    <p>O HTML é uma linguagem de marcação que os desenvolvedores web usam para criar o conteúdo estrutural das páginas da internet. 
+        Ela é a espinha dorsal da web,
+         responsável por organizar o texto, imagens, links e outros elementos em uma página da web. Em outras palavras, o HTML é o que dá estrutura e significado ao conteúdo que você vê em seu navegador.</p>
+
     <hr>
     &#x2709
           <p><ins><b>Fale conosco</b></ins></p>
