--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@ img {
 
     <h1>O Que é HTML?</h1>
     <p>O HTML é uma linguagem de marcação que os desenvolvedores web usam para criar o conteúdo estrutural das páginas da internet. 
-        Ela é a espinha dorsal da web,
-         responsável por organizar o texto, imagens, links e outros elementos em uma página da web. Em outras palavras, o HTML é o que dá estrutura e significado ao conteúdo que você vê em seu navegador.</p>
+        Ela é a espinha dorsal da web, responsável por organizar o texto, imagens, links e outros elementos em todas páginas da web, essa página, por exemplo, foi totalmento criada em HTML. Em outras palavras, o HTML é o que dá estrutura e significado ao conteúdo que você vê em seu navegador.</p>
 
     <hr>
     &#x2709
