--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ img {
 <body>
     <div class="header">
     <h1><mark>MUNDO DIGITAL</mark></h1>
-    <h2>Dicas e Informações para os amantes de Tecnologia</h2>
+    <h2>Dicas e Informações para os amantes de Tecnologia e Internet</h2>
     <hr>
 </div>
     <img src="tec-imagem.jpg" alt="imagem generica de tecnologia">
