--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content=", index,follow" />
     <meta name="google-site-verification" content="Ala7NgWmhHqIrbTfMb0HQQ2Z-BxxcAWSDy9GX2QD1Tc" />
     
-    <link rel="stylesheet" href="style,css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="et.ico" type="image/x-icon">
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS
     </title>
