--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>Dicas e Informações para os amantes de Tecnologia e Internet</h2>
     <hr>
 </div>
-    <img src="tec-imagem.jpg" alt="imagem generica de tecnologia">
+    <img src="tec-imagem1.jpg" alt="imagem generica de tecnologia">
     
 
     <h1>Sabe o que é Blockchain??</h1>
