--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="google-site-verification" content="Ala7NgWmhHqIrbTfMb0HQQ2Z-BxxcAWSDy9GX2QD1Tc" />
     
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS </title>
+    <link rel="canonical" href="https://wcioccimkt-github-io.vercel.app/" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     
