--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
         Ela é a espinha dorsal da web, responsável por organizar o texto, imagens, links e outros elementos em todas páginas da web, esse blog, por exemplo, foi totalmente criada em HTML. Em outras palavras, o HTML é o que dá estrutura e significado ao conteúdo que você vê em seu navegador.</p>
 
     <hr>
+    <h1>O Que é Front-end?</h1>
+    <p>Front-end é tudo o que um usuário experimenta ao interagir com uma aplicação, é a parte visual de um site,  incluindo design, layout, cores, fontes, botões, menus e qualquer elemento visual ou interativo.
+
+        As tecnologias comuns utilizadas no desenvolvimento front-end incluem HTML para a estruturação da página, CSS para o design e layout, e JavaScript para a interatividade e manipulação dinâmica de conteúdo na página.</p>
+
+    <hr/>
     &#x2709
           <p><ins><b>Fale conosco</b></ins></p>
     <a href="mailto:clarinsantista@gmail.com">clarinsantista@gmail.com</a>
