--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
         As tecnologias comuns utilizadas no desenvolvimento front-end incluem HTML para a estruturação da página, CSS para o design e layout, e JavaScript para a interatividade e manipulação dinâmica de conteúdo na página.</p>
 
     <hr/>
+    <h1>O que é Realidade aumentada?</h1>
+    <p>A realidade aumentada é uma tecnologia que permite a sobreposição de elementos virtuais em um ambiente real, por meio de dispositivos móveis ou óculos especiais. Ela consiste em uma câmera que capta as imagens e informações do ambiente real para serem interagidos com objetos virtuais e exibem o conteúdo na plataforma.
+    A partir desses elementos, a realidade aumentada consegue realizar seu objetivo, criando uma experiência de imersão para todos os usuários. </p>
+
+    <hr/>
+
+
     &#x2709
           <p><ins><b>Fale conosco</b></ins></p>
     <a href="mailto:clarinsantista@gmail.com">clarinsantista@gmail.com</a>
