--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ width: 100%;
 
         A criação de uma AGI implica em desenvolver sistemas que possam raciocinar, aprender, perceber o ambiente e interagir de maneira significativa em diferentes contextos. Isso vai muito além da automação de tarefas específicas e envolve a capacidade de adaptação a novas situações, a compreensão de conceitos abstratos e a tomada de decisões complexas.
         
-        Essa tecnologia pode impactar profundamente a sociedade do mundo todo. Incluindo questões éticas e sociais. Desenvolvendo habilidades quase humanas para todos as atividades como: educação , saúde e muito mais,,,</p>
+        Essa tecnologia pode impactar profundamente a sociedade do mundo todo. Incluindo questões éticas e sociais. Desenvolvendo habilidades quase humanas para todos as atividades como: educação , saúde e muito mais...</p>
 
         <hr/>
     
