--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Mkt Digital" />
     <meta name="keywords" content="tecnologia, html, linux, programação, webdesign, inteligencia artificial, AGI, artificial general intelligence, blockchain,informatica, android" />
     <meta name="google-site-verification" content="Ala7NgWmhHqIrbTfMb0HQQ2Z-BxxcAWSDy9GX2QD1Tc" />
+    <meta name="google-adsense-account" content="ca-pub-4815983237031177">
     
     <title>MUNDO DIGITAL - BLOG PARA OS AMANTES DE TECNOLOGIA COM INFORMAÇÕES E DICAS </title>
     <link rel="canonical" href="https://mundodigital.vercel.app/" />
