--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ width: 100%;
     
     <h1>Sabe o que é Blockchain??</h1>
     <p>É uma tecnologia que permite o armazenamento e a transmissão de informações de 
-        forma segura, transparente e descentralizada. É uma rede de bancos de dados distribuídos que mantém um registro público de transações ou eventos. É uma espécie de livro-razão digital, que registra informações de forma imutável e auditável.
+        forma segura, transparente e descentralizada. É uma rede de bancos de dados distribuídos que mantém um registro público de transações ou eventos. <a href="https://pt.wikipedia.org/wiki/Blockchain">Blockchain</a> é uma espécie de livro-razão digital, que registra informações de forma imutável e auditável.
 
     </p>
     <hr>
@@ -77,10 +77,10 @@ width: 100%;
     <p> Um CDN (Content Delivery Network) é uma rede de servidores distribuídos geograficamente que ajuda a melhorar a velocidade e confiabilidade da entrega de conteúdo, como imagens, vídeos, páginas da web e outros arquivos estáticos e dinâmicos, para os usuários finais.</p>
     <hr>
     <h1>Você sabe o que é Inteligência Artificial?</h1>
-    <p>A inteligência artificial (IA) é o conjunto de técnicas e tecnologias que visam criar sistemas capazes de realizar tarefas que normalmente requerem inteligência humana. Ela é uma área da informática que se preocupa com a criação de máquinas capazes de realizar tarefas que só poderiam ser realizadas por seres humanos.</p>
+    <p>A inteligência artificial (IA) é o conjunto de técnicas e tecnologias que visam criar sistemas capazes de realizar tarefas que normalmente requerem inteligência humana. <a href="https://pt.wikipedia.org/wiki/Blockchain">A inteligència artificial</a> é uma área da informática que se preocupa com a criação de máquinas capazes de realizar tarefas que só poderiam ser realizadas por seres humanos.</p>
     <hr>
     <h1>Saiba o que é Copywriting</h1>
-    <p>Copywriting é a arte de escrever textos persuasivos que visam vender produtos ou serviços. Ele é amplamente utilizado em publicidade, marketing e propaganda, e também pode ser usado em outras áreas, como relações públicas e jornalismo.</p>
+    <p>Copywriting é a arte de escrever textos persuasivos que visam vender produtos ou serviços. <a href="https://pt.wikipedia.org/wiki/Reda%C3%A7%C3%A3o_publicit%C3%A1ria">Copywriting</a> é amplamente utilizado em publicidade, marketing e propaganda, e também pode ser usado em outras áreas, como relações públicas e jornalismo.</p>
     <hr>
     <h1>A importância da tecnologia em nossas vidas</h1>
     <p>A tecnologia tem se tornado cada vez mais presente em nossas vidas e tem desempenhado um papel fundamental na forma como vivemos, trabalhamos e nos relacionamos uns com os outros.  Existem várias formas pelas quais a tecnologia tem impactado positivamente nossas vidas.</p>
@@ -101,7 +101,7 @@ width: 100%;
         <hr>
     <h1>O Que é HTML?</h1>
     <p>O HTML é uma linguagem de marcação que os desenvolvedores web usam para criar o conteúdo estrutural das páginas da internet. 
-        Ela é a espinha dorsal da web, responsável por organizar o texto, imagens, links e outros elementos em todas páginas da web, esse blog, por exemplo, foi totalmente criada em HTML. Em outras palavras, o HTML é o que dá estrutura e significado ao conteúdo que você vê em seu navegador.</p>
+        <a href="https://pt.wikipedia.org/wiki/HTML5">O Hypertext Markup Language</a> é a espinha dorsal da web, responsável por organizar o texto, imagens, links e outros elementos em todas páginas da web, esse blog, por exemplo, foi totalmente criada em HTML. Em outras palavras, o HTML é o que dá estrutura ao conteúdo que você vê em seu navegador.</p>
 
     <hr>
     <h1>O Que é Front-end?</h1>
