--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ width: 100%;
     <p> Um CDN (Content Delivery Network) é uma rede de servidores distribuídos geograficamente que ajuda a melhorar a velocidade e confiabilidade da entrega de conteúdo, como imagens, vídeos, páginas da web e outros arquivos estáticos e dinâmicos, para os usuários finais.</p>
     <hr>
     <h1>Você sabe o que é Inteligência Artificial?</h1>
-    <p>A inteligência artificial (IA) é o conjunto de técnicas e tecnologias que visam criar sistemas capazes de realizar tarefas que normalmente requerem inteligência humana. <a href="https://pt.wikipedia.org/wiki/Blockchain">A inteligència artificial</a> é uma área da informática que se preocupa com a criação de máquinas capazes de realizar tarefas que só poderiam ser realizadas por seres humanos.</p>
+    <p>A inteligência artificial (IA) é o conjunto de técnicas e tecnologias que visam criar sistemas capazes de realizar tarefas que normalmente requerem inteligência humana. <a href="https://pt.wikipedia.org/wiki/Intelig%C3%AAncia_artificial">A inteligència artificial</a> é uma área da informática que se preocupa com a criação de máquinas capazes de realizar tarefas que só poderiam ser realizadas por seres humanos.</p>
     <hr>
     <h1>Saiba o que é Copywriting</h1>
     <p>Copywriting é a arte de escrever textos persuasivos que visam vender produtos ou serviços. <a href="https://pt.wikipedia.org/wiki/Reda%C3%A7%C3%A3o_publicit%C3%A1ria">Copywriting</a> é amplamente utilizado em publicidade, marketing e propaganda, e também pode ser usado em outras áreas, como relações públicas e jornalismo.</p>
