--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@ width: 100%;
     <p id=footer><a href="index.html">Voltar ao topo</a></p>
     
     
-    <footer>Copyright&copy; 2023. Mkt Digital</footer>
+    <footer>
+Copyright(C)2023.<a class="footer"  href="politicaprivacidade.html" target="_blank">Política de Privacidade</footer>
+
 
 </body>
 </html>
