--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ width: 100%;
     
     
     <footer>
-Copyright(C)2023.<a class="footer"  href="politicaprivacidade.html" target="_blank">Política de Privacidade</footer>
+Copyright(C)2023.<a class="footer"  href="privacidade.html" target="_blank">Política de Privacidade</footer>
 
 
 </body>
