--- a/privacidade.html
+++ b/privacidade.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Avaliação de imóveis, Avaliação de imóveis em Santos, Laudo de avaliação de imóveis,Laudo de avaliação de imóveis residenciais,Laudo de avaliação de imóveis comerciais, Avaliação patrimonial, Parecer técnico de avaliação de imóveis.">
+    <meta name="google-adsense-account" content="ca-pub-4815983237031177">
     
     
     <title>Avaliação de Imóveis em Santos- Ligue 13 99177-9237</title>
