--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@ width: 100%;
      <p>O kernel é a parte central de um sistema operacional, responsável por gerenciar os recursos do hardware e permitir a comunicação entre o hardware e o software. Ele atua como uma ponte entre os aplicativos e o hardware do computador, gerenciando procesos, arquivos, memória , segurança e permissões. O <a href="https://pt.wikipedia.org/wiki/N%C3%BAcleo_(sistema_operacional)">Kernel</a> é fundamental para o funcionamento de um sistema operacional, servindo como a camada de controle mais baixa que interage diretamente com o hardware.
     </p>
     
+     <h1>Sabe o que é Codigo-aberto?</h1>
+    <p>Código aberto ou "open source", refere-se a um tipo de software cujo código-fonte é disponibilizado publicamente para que qualquer pessoa possa ver, modificar e distribuir. A ideia central é a colaboração aberta, permitindo que desenvolvedores de todo o mundo contribuam para a melhoria do software. <a href="https://pt.wikipedia.org/wiki/C%C3%B3digo_aberto">Código aberto</a> possui comunidades ativas que oferecem suporte, transparencia e colaboram com o desenvolvimento do software.
+
+    </p>
+    
     <h1>Sabe o que é Blockchain??</h1>
     <p>É uma tecnologia que permite o armazenamento e a transmissão de informações de 
         forma segura, transparente e descentralizada. É uma rede de bancos de dados distribuídos que mantém um registro público de transações ou eventos. <a href="https://pt.wikipedia.org/wiki/Blockchain">Blockchain</a> é uma espécie de livro-razão digital, que registra informações de forma imutável e auditável.
