--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     
 </head>
 <style>
+
+html, body{
+overflow-x: hidden !important; 
+}
+
 body
 {
     background-color: white;
@@ -51,7 +56,6 @@ body
 img {
 width: 100%;
 }
-
 
 
 </style>
