--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
 </head>
 <style>
 
-html, body{
-overflow-x: hidden !important; 
-}
 
 body
 {
     background-color: white;
+    overflow-x: hidden;
     padding: 2rem; 
     color: black;
     margin: 20%;
