--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ width: 100%;
 
     <hr/>
     <h1>Saiba o que é AGI</h1>
-    <p>AGI, ou Inteligência Artificial Geral, refere-se a um tipo de inteligência artificial que possui a capacidade de entender, aprender e aplicar conhecimentos de forma abrangente em uma ampla variedade de tarefas, de maneira semelhante ou superior à inteligência humana. Enquanto a inteligência artificial convencional, conhecida como IA estreita, é projetada para realizar tarefas específicas.
+    <p>AGI, ou <a href="https://youtu.be/LhLyOWoUnDI?si=dmcCeNCCojoXEDY5">Articial General Intelligence</a>, refere-se a um tipo de inteligência artificial que possui a capacidade de entender, aprender e aplicar conhecimentos de forma abrangente em uma ampla variedade de tarefas, de maneira semelhante ou superior à inteligência humana. Enquanto a inteligência artificial convencional, conhecida como IA estreita, é projetada para realizar tarefas específicas.
 
         A criação de uma AGI implica em desenvolver sistemas que possam raciocinar, aprender, perceber o ambiente e interagir de maneira significativa em diferentes contextos. Isso vai muito além da automação de tarefas específicas e envolve a capacidade de adaptação a novas situações, a compreensão de conceitos abstratos e a tomada de decisões complexas.
         
