--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dicas e Informações para os amantes de Tecnologia" />
+    <meta name="description" content="Dicas e Informações para os amantes de Tecnologia - inteligencia artificial, AGI, artificial general intelligence" />
     <meta name="keywords" content="tecnologia, html, linux, programação, webdesign, inteligencia artificial, AGI, artificial general intelligence, o que é linux, blockchain,informatica, android, copywriting" />
     <meta name="google-site-verification" content="57Y0YxLd6rXCkPFRkoQSxWRpoO4zwI4Br7vErNr46OQ" />
     <meta name="google-adsense-account" content="ca-pub-4815983237031177">
