--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ width: 100%;
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="comentarios">Deixe seu comentários:</label>
+                <label for="comentarios">Deixe seu comentário:</label>
                 <textarea id="comentarios" name="comentarios" required></textarea>
             </div>
             <div class="form-group">
