--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Ideal para: Programadores, de sistemas e usuários que buscam um sistema operaci
     <p>Migrar para Linux pode ser uma experiência gratificante, oferecendo maior controle, personalização e estabilidade.
 Defina suas necessidades,como: Quais programas você usa com frequência?
 Qual o nível de conhecimento técnico você possui?
-Qual distribuição linux vai usar? Crie uma máquina virtual com a distribuição escolhida para experimentar sem afetar seu sistema atual.Uma ótima opção para começar sem sofrer um impacto muito grande é a distribuição Linux Mint. 
+Qual distribuição linux vai usar? Crie uma máquina virtual com a distribuição escolhida para experimentar sem afetar seu sistema atual.Uma ótima opção para começar sem sofrer um impacto muito grande é a distribuição <a href="https://www.linuxmint.com/"> Linux Mint</a>
 O Linux é um sistema muito flexível, permitindo que você personalize praticamente tudo. Você não irá se arrepender.<p>
 
    <hr>
