--- a/index.html
+++ b/index.html
@@ -137,8 +137,17 @@ width: 100%;
     <main>
     <section class="artigos">
     
-    <span>Atualizado em 12 de agosto de 2024.</span>
+    <span>Atualizado em 25 de agosto de 2024.</span>
     <p>Fique ligado em nosso blog para mais atualizações sobre tecnologias emergentes</p>
+
+ <hr>
+    <h1>A Importancia da tecnologia na Educação</h1>
+    <p> A tecnologia tem se tornado uma força transformadora em praticamente todos os aspectos de nossas vidas, e a educação não é exceção. A integração da tecnologia no ambiente educacional não é apenas uma tendência passageira, mas uma necessidade vital para preparar os estudantes para um mundo cada vez mais digital. Vamos explorar por que a tecnologia é tão importante na educação moderna.
+
+A importância da tecnologia na educação vai além da mera modernização das salas de aula. Ela representa uma mudança fundamental na forma como entendemos e abordamos o aprendizado. Ao integrar a tecnologia de maneira significativa, podemos criar ambientes educacionais mais dinâmicos, inclusivos e eficazes, preparando os alunos não apenas para passar em exames, mas para prosperar em um mundo em constante evolução.
+
+No entanto, é crucial lembrar que a tecnologia é uma ferramenta, não um substituto para bons professores e práticas pedagógicas sólidas. O verdadeiro poder da tecnologia na educação é realizado quando ela é utilizada de forma equilibrada e intencional, sempre com o objetivo final de melhorar a experiência de aprendizagem e os resultados dos alunos.</p>
+    <hr>
     <h1>Qual Sistema Operacional Escolher?</h1>
     <p>A escolha do <a href="https://diolinux.com.br/sistemas-operacionais/windows-mais-estavel-do-que-o-linux.html"> sistema operacional</a> ideal depende das suas necessidades e preferências individuais. Não existe um sistema operacional que seja melhor que todos os outros. Ao considerar suas necessidades, você poderá tomar a melhor decisão para você. Vamos citar os 3 sistemas operacionais mais conhecidos:
 
@@ -323,4 +332,3 @@ Copyright(C)Mkt Digital. Todos os direitos reservados.<a class="footer"  href="p
 
 </body>
 </html>
-
